2005-10-27  Alexander Larsson  <alexl@redhat.com>

	* README:
	Add comment about gconf 2.12.1 requirement for enforce mandatory
	
	* admin-tool/sabayon.desktop.in:
	Better name
	
	* admin-tool/changeswindow.py:
	* admin-tool/editorwindow.py:
	* admin-tool/fileviewer.py:
	* admin-tool/gconfviewer.py:
	* admin-tool/sabayon.glade:
	* admin-tool/sessionwindow.py:
	* admin-tool/usersdialog.py:
	* lib/protosession.py:
	Better window titles

2005-10-27  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/sabayon-apply:
	Add -s argument to mean "nested sabayon session"
	
	* admin-tool/sessionwindow.py:
	Add Enforce mandatory toggle menu item. You can use
	this to edit a settting that you earlier set as mandatory.
	
	* lib/config.py.in:
	Ignore directory .gconf.xml.mandatory-alt
	
	* lib/protosession.py:
	Pass -s to apply tool
	
	* lib/sources/filessource.py:
	* lib/sources/mozillasource.py:
	* lib/sources/paneldelegate.py:
	* lib/sources/testsource.py:
	* lib/userprofile.py:
	Add set_enforce_mandatory() call and is_sabayon_session argument
	to apply()
	
	* lib/storage.py:
	Allow you to use different source name when adding file
	
	* lib/sources/gconfsource.py:
	Implement set_enforce_mandatory() by having two mandatory trees
	at different places in the stack and moving between them.
	Only listen for changes in the ~/.gconf source
	use client.suggest_sync to sync in sync_changes instead of shutting
	down gconfd.

2005-10-26  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/sessionwindow.py:
	* lib/protosession.py:
	Apply the profile before starting the session.
	This means the file sources being applied isn't recorded in the session.

2005-10-24  Alexander Larsson  <alexl@redhat.com>

	* lib/sources/gconfsource.py (GConfSource.sync_changes):
	Look for the right file when saving gconf state.

2005-10-24  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/gconfviewer.py:
	* admin-tool/sabayon:
	* admin-tool/sabayon-session:
	* lib/userprofile.py: