@@ -1,5 +1,12 @@
 2005-10-27  Alexander Larsson  <alexl@redhat.com>
 
+	* admin-tool/sessionwindow.py:
+	* lib/sources/filessource.py:
+	* lib/userprofile.py:
+	Make backup files be marked ignore by default.
+
+2005-10-27  Alexander Larsson  <alexl@redhat.com>
+
 	* README:
 	Add comment about gconf 2.12.1 requirement for enforce mandatory
 	
